[project]
name = "mcp-project"
version = "0.1.0"
description = "A simple project demonstrating fastmcp integration."
authors = [
    { name = "Roo", email = "roo@example.com" },
]
dependencies = [
    "fastmcp==2.5.1",
    "pydantic-settings==2.9.1",
    "requests==2.32.3",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
keywords = ["fastmcp", "python"]

[project.urls]
Homepage = "https://github.com/yourusername/mcp-project"
Issues = "https://github.com/yourusername/mcp-project/issues"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]